# lmms-owc

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  eval_metrics.py  eval_model.py  eval_ranking.py  pyproject.toml
.github/workflows/: code-quality-main.yaml  code-quality-pr.yaml
scripts/: interact.sh  schedule_batch.sh  schedule_sbatch.sh  sync.sh
src/: __init__.py
src/data/: __init__.py
src/data/filters/: __init__.py  _api.py  _base.py  _extraction.py  _selection.py  _transformation.py
src/data/loggers/: __init__.py  _wandb.py
src/data/metrics/: __init__.py  _api.py  _group.py  _instance.py
src/data/pipelines/: __init__.py
src/data/pipelines/image/: __init__.py  _image.py
src/data/pipelines/text/: __init__.py  _text.py
src/data/samplers/: __init__.py  _api.py  _base.py  _context.py
src/data/tasks/: __init__.py  _api.py  _base.py  _config.py  _manager.py
src/data/tasks/_classification/caltech101/: base.yaml  caption.yaml  describe.yaml  list.yaml  llamav_o1.yaml  llava_cot.yaml  more_generic.yaml  more_specific.yaml  zero_shot_cot.yaml
src/data/tasks/_classification/caltech101/assets/: _caltech101_utils.py  _default_template_yaml
src/data/tasks/_classification/dtd/: base.yaml  caption.yaml  describe.yaml  fine_grained.yaml  list.yaml  llamav_o1.yaml  llava_cot.yaml  more_generic.yaml  more_specific.yaml  zero_shot_cot.yaml
src/data/tasks/_classification/dtd/assets/: _default_template_yaml  _dtd_utils.py
src/data/tasks/_classification/eurosat/: base.yaml  caption.yaml  describe.yaml  list.yaml  llamav_o1.yaml  llava_cot.yaml  more_generic.yaml  more_specific.yaml  zero_shot_cot.yaml
src/data/tasks/_classification/fgvc_aircraft/: base.yaml  caption.yaml  describe.yaml  fine_grained.yaml  list.yaml  llamav_o1.yaml  llava_cot.yaml  more_generic.yaml  more_specific.yaml  zero_shot_cot.yaml
src/data/tasks/_classification/flowers102/: base.yaml  caption.yaml  describe.yaml  fine_grained.yaml  list.yaml  llamav_o1.yaml  llava_cot.yaml  more_generic.yaml  more_specific.yaml  zero_shot_cot.yaml
src/data/tasks/_classification/food101/: base.yaml  caption.yaml  describe.yaml  fine_grained.yaml  list.yaml  llamav_o1.yaml  llava_cot.yaml  more_generic.yaml  more_specific.yaml  zero_shot_cot.yaml
src/data/tasks/_classification/oxford_pets/: base.yaml  caption.yaml  describe.yaml  fine_grained.yaml  list.yaml  llamav_o1.yaml  llava_cot.yaml  more_generic.yaml  more_specific.yaml  zero_shot_cot.yaml
src/data/tasks/_classification/stanford_cars/: base.yaml  caption.yaml  describe.yaml  fine_grained.yaml  list.yaml  llamav_o1.yaml  llava_cot.yaml  more_generic.yaml  more_specific.yaml  zero_shot_cot.yaml
src/data/tasks/_classification/sun397/: base.yaml  caption.yaml  describe.yaml  list.yaml  llamav_o1.yaml  llava_cot.yaml  more_generic.yaml  more_specific.yaml  zero_shot_cot.yaml
src/data/tasks/_classification/ucf101/: base.yaml  caption.yaml  describe.yaml  list.yaml  llamav_o1.yaml  llava_cot.yaml  more_generic.yaml  more_specific.yaml  zero_shot_cot.yaml
src/data/tasks/_examples/ai2d/: _ai2d_utils.py  ai2d.yaml
src/data/tasks/_examples/mmmu/: _mmmu_utils.py  mmmu.yaml  mmmu_pass8.yaml  mmmu_val_reasoning.yaml
src/data/tasks/_examples/muirbench/: _muirbench_utils.py  muirbench.yaml
src/data/tasks/_examples/ocr_bench/: _ocr_bench_utils.py  ocr_bench.yaml
src/engine/: __init__.py  _engine.py  _tracker.py
src/models/: __init__.py  _api.py  _base.py  _idefics2.py  _instructblip.py  _internvl2.py  _llava_hf.py  _llava_onevision.py  _phi3v.py  _qwen2_vl.py
src/schema/: __init__.py  _base.py
src/utils/: __init__.py  _core_utils.py  _data_utils.py  _decorators.py  _engine_utils.py  _logging_utils.py  _models_utils.py
tests/: conftest.py
tests/models/: conftest.py  models_test.py
(+17 files in other folders)
